namespace StarResonanceDpsAnalysis.Core.Analyze;

internal enum ServiceIds : uint
{
    Ace = 1128535U,
    AceSdkNtf = 1239299317U,
    AgentSocket = 528697744U,
    AgentSocketNtf = 1456636592U,
    ChitChat = 1321197368U,
    ChitChatNtf = 164931432U,
    Community = 1889623913U,
    Exchange = 1425897923U,
    Fish = 159183444U,
    Friend = 628379986U,
    FriendNtf = 1994100518U,
    Gasha = 1802193622U,
    GM = 9378U,
    GrpcCharactor = 1232729813U,
    GrpcCharactorNtf = 1953836151U,
    GrpcCommunityNtf = 1453563045U,
    GrpcTeam = 1942767819U,
    GrpcTeamNtf = 966773353U,
    GrpcTime = 1942838027U,
    GrpcWarehouseNtf = 1406513963U,
    HttpPlatform = 265461799U,
    IdIp = 165836418U,
    LevelNtf = 656251580U,
    Mahjong = 1455223686U,
    MahjongNtf = 830957730U,
    Mail = 174781487U,
    MailNtf = 1753654261U,
    Match = 1421726013U,
    MatchNtf = 822849903U,
    PathFinding = 1852533500U,
    Pay = 1385708U,
    Photograph = 904190988U,
    PhotographNtf = 829259716U,
    Player = 239061305U,
    PlayerOrder = 890981701U,
    ProfessionProject = 1917956833U,
    Questionnaire = 433749387U,
    QuestionnaireNtf = 194476713U,
    RecommendPlay = 1044803392U,
    Report = 208164940U,
    SceneLine = 561409748U,
    Season = 99295807U,
    Social = 901134105U,
    SocialNtf = 625772963U,
    Statistics = 1148778275U,
    SubScribeNtf = 1173808878U,
    TLog = 190158524U,
    Union = 1659279723U,
    UnionNtf = 504281929U,
    Warehouse = 632827483U,
    WeeklyTower = 1067746460U,
    World = 103198054U,
    WorldActivityNtf = 936649811U,
    WorldBoss = 1101442927U,
    WorldEvent = 1306614628U,
    WorldGrpc = 1112734456U,
    WorldLoginNtf = 78136601U,
    WorldNtf = 1664308034U,
    WorldQuest = 543398948U,
    WorldRpcMetrics = 1712833768U
}
